--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "vite-coding",
+	"homepage": "https://IamUnknownZ.github.io/ViteCoding",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
