--- a/package.json
+++ b/package.json
@@ -14,13 +14,22 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.2.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"hamburger-react": "^2.5.2",
+		"lucide-react": "^0.575.0",
+		"motion": "^12.34.3",
 		"ogl": "^1.0.11",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"react-router-dom": "^7.13.1",
+		"rough-notation": "^0.5.1",
+		"tailwind-merge": "^3.5.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
+		"@types/node": "^25.3.0",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.1",
